# quadomnibot

omni3wdbot_description/: CMakeLists.txt  package.xml
omni3wdbot_description/config/: omni3wdbot_controllers.yaml
omni3wdbot_description/launch/: hardware.launch.py  viz.launch.py
omni3wdbot_description/rviz/: model.rviz
omni3wdbot_description/urdf/: omni3wdbot.ros2_control.xacro  omni3wdbot.urdf.xacro
omni3wdbot_gazebosim/: CMakeLists.txt  package.xml
omni3wdbot_gazebosim/config/: cafe.world  cafemap.pgm  ekf_config.yaml  ekf_config_scan_odomadd.yaml  nav2.rviz  navigation_mppi.yaml  odom.rviz  slamtoolbox_config.yaml
omni3wdbot_gazebosim/launch/: gazebo_bringup.launch.py  gazebo_cafe_bringup.launch.py  gazebo_cafe_bringup_scan_matcher.launch.py  gazebo_cafe_bringup_with_navi2.launch.py  joy_cmdvel.launch.py  slamtoolbox_online_async.launch.py
omni3wdbot_gazebosim/src/: cmdvel_translator.cpp
omni3wdbot_hardware_interface/: CMakeLists.txt  omni3wdbot_hardware_interface_plugin.xml  package.xml
omni3wdbot_hardware_interface/include/omni3wdbot_hardware_interface/: omni3wdbot_hardware_interface.hpp  omnibot_comm.hpp  visibility_control.h
omni3wdbot_hardware_interface/src/: omni3wdbot_hardware_interface.cpp  omnibot_comm.cpp
omni3wdbot_hardware_interface/test/: omni3wdbot.urdf  test_load_omni_3wd_hardware.cpp
omnibot_description/: CMakeLists.txt  package.xml
omnibot_description/config/: omnibot_controllers.yaml
omnibot_description/launch/: viz.launch.py
omnibot_description/urdf/: inertia_calc.xacro  omnibot.ros2_control.xacro  omnibot.urdf.xacro  omniwheel.urdf.xacro
omnibot_gazebosim/: CMakeLists.txt  package.xml
omnibot_gazebosim/config/: cafemap.yaml  ekf_config.yaml  ekf_config_scan_odomadd.yaml  nav2.rviz  navigation.yaml  navigation_mppi.yaml  odom.rviz  omnibot_2d.lua  slamtoolbox_config.yaml
omnibot_gazebosim/launch/: gazebo_bringup.launch.py  gazebo_cafe_bringup.launch.py  gazebo_cafe_bringup_scan_matcher.launch.py  gazebo_cafe_bringup_with_cartographer.launch.py  gazebo_cafe_bringup_with_nav2.launch.py  gazebo_cafe_bringup_with_navi2.launch.py  slamtoolbox_online_async.launch.py
omnibot_gazebosim/src/: cmdvel_translator.cpp  imu_quat_normalizer.cpp
